--- a/QRCodeScanner2/app/src/main/res/layout/activity_results.xml
+++ b/QRCodeScanner2/app/src/main/res/layout/activity_results.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:id="@+id/activity_results"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,47 +12,46 @@
     tools:context="com.example.user.qrcodescanner.ResultsActivity">
 
     <ImageView
-        android:layout_width="355dp"
-        android:layout_height="300dp"
         android:id="@+id/result_of_scan"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:scaleType="centerCrop"
         />
 
     <TextView
-        android:text="Результат"
-        android:layout_width="wrap_content"
-        android:textSize="20dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="Результат"
+        android:textSize="20dp" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:textSize="20dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:id="@+id/result_txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textSize="20dp" />
 
     <Button
-        android:text="Продолжить сканирование"
-        android:textSize="14dp"
+        android:id="@+id/continScan_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="60dp"
-        android:id="@+id/continScan_btn" />
-
+        android:text="Продолжить съемку"
+        />
 
     <Button
-        android:text="Назад"
-        android:layout_marginLeft="130dp"
-        android:textSize="14dp"
         android:id="@+id/back_btn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Назад"
+        />
 
 </LinearLayout>
