--- a/QRfixes/app/src/main/res/layout/activity_main.xml
+++ b/QRfixes/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:weightSum="1">
 
+
+
     <ImageView
         android:id="@+id/result_of_scan"
         android:layout_width="300dp"
@@ -49,7 +51,8 @@
         android:layout_height="wrap_content"
         android:text="Прочитать QR"
         android:textSize="15sp"
-        tools:layout_marginTop="300dp"
+        tools:layout_marginTop="15dp"
+        android:layout_below="@+id/result_of_scan"
         android:layout_centerHorizontal="true" />
 
     <Button
@@ -62,5 +65,4 @@
         android:layout_below="@+id/scan_btn"
         android:layout_alignLeft="@+id/result_of_scan"
         android:layout_alignStart="@+id/result_of_scan" />
-
 </RelativeLayout>
