--- a/QRfixes/app/src/main/res/layout/activity_results.xml
+++ b/QRfixes/app/src/main/res/layout/activity_results.xml
@@ -29,16 +29,6 @@
         android:layout_centerHorizontal="true" />
 
     <TextView
-        android:id="@+id/result_txt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:layout_above="@+id/continScan_btn"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textColor="@color/colorPrimaryDark"/>
-
-    <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,27 +41,24 @@
         android:textColor="@color/colorPrimaryDark"
         android:layout_marginStart="1dp" />
 
+    <TextView
+        android:id="@+id/result_txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_above="@+id/continCam_btn"
+        android:layout_alignStart="@+id/textView" />
+
     <Button
         android:id="@+id/continCam_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12sp"
         android:text="Продолжить съемку"
-        android:layout_alignBottom="@+id/continScan_btn"
-        android:layout_toRightOf="@+id/back_btn"
-        android:layout_toEndOf="@+id/back_btn" />
-
-    <Button
-        android:text="Продолжить сканирование"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="12sp"
-        android:id="@+id/continScan_btn"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="15dp"
         android:layout_above="@+id/back_btn"
-        android:layout_toLeftOf="@+id/continCam_btn"
-        android:layout_toStartOf="@+id/continCam_btn"
-        android:layout_marginRight="62dp"
-        android:layout_marginEnd="62dp" />
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
